[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix
actix-web = "4.3.1"
# database
sqlx = { version = "0.6.3", default-features = false, features = [ "runtime-actix-native-tls", "macros", "postgres", "uuid", "chrono", "json" ] }
# tracing
tracing = "0.1"
# shared
shared = { path = "../../shared" }
# serde
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
actix-rt = "2.0.0"
