[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
# local
api-lib = { path = "../lib" }
actix-web = "4.3.1"
shuttle-actix-web = "0.20.0"
shuttle-runtime = "0.20.0"
tokio = "1.26.0"
# database
shuttle-shared-db = { version = "0.20.0", features = ["postgres"] }
sqlx = { version = "0.6.3", default-features = false, features = [ "runtime-actix-native-tls", "macros", "postgres", "uuid", "chrono", "json" ] }
# tracing
tracing = "0.1"
